fixed a cosmetic glitch with flex wrap

--- a/src/components/AccountPreview.module.css
+++ b/src/components/AccountPreview.module.css
@@ -1,4 +1,5 @@
 .account_preview {
+    width: 290px;
     background-color: var(--primary-color);
     border: 1px solid var(--ternary-color);
     border-radius: 4px;
