--- a/src/components/sections/AccountsSection.module.css
+++ b/src/components/sections/AccountsSection.module.css
@@ -28,6 +28,7 @@
 .accounts_section_gallery {
     display: flex;
     justify-content: center ;
+    flex-wrap: wrap;
     width: 100%;
     gap: 15px;
     background-color: var(--primary-color);
